--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
 :root {
- --dark: #111111;
- --dark-alternate: #1B1918 ;
- --primary: #FF5F3F;
- --primary-light: #F4EBEB;
+  --dark: #111111;
+  --dark-alternate: #1b1918;
+  --primary: #ff5f3f;
+  --primary-light: #f4ebeb;
 }
 
 @theme inline {
@@ -13,10 +13,11 @@
   --color-primary: var(--primary);
   --color-primary-light: var(--primary-light);
   --font-poppins: var(--font-poppins);
- 
 }
 
-
+html {
+  overflow-x: hidden;
+}
 
 * {
   @apply font-poppins;
